// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> renders correctly 1`] = `
<DocumentFragment>
  <label
    class="chakra-checkbox css-1577qb8"
    data-testid="test-checkbox"
  >
    <input
      class="chakra-checkbox__input"
      name="test"
      style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
      type="checkbox"
      value=""
    />
    <span
      aria-hidden="true"
      class="chakra-checkbox__control css-124d1"
    />
  </label>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Checkbox /> shows correctly children: Using children 1`] = `
<DocumentFragment>
  <label
    class="chakra-checkbox css-1577qb8"
    data-testid="test-checkbox"
  >
    <input
      class="chakra-checkbox__input"
      name="test"
      style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
      type="checkbox"
      value=""
    />
    <span
      aria-hidden="true"
      class="chakra-checkbox__control css-124d1"
    />
    <span
      class="chakra-checkbox__label css-tzpp0r"
    >
      <p
        class="chakra-text css-0"
      >
        checkbox item
      </p>
    </span>
  </label>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Checkbox /> shows correctly when is checked and disabled: Using as default checked and disabled 1`] = `
<DocumentFragment>
  <label
    class="chakra-checkbox css-1577qb8"
    data-checked=""
    data-disabled=""
    data-testid="test-checkbox"
  >
    <input
      aria-disabled="true"
      checked=""
      class="chakra-checkbox__input"
      disabled=""
      name="test"
      style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
      type="checkbox"
      value=""
    />
    <span
      aria-hidden="true"
      class="chakra-checkbox__control css-124d1"
      data-checked=""
      data-disabled=""
    >
      <svg
        class="chakra-icon css-1oeccli"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 256 256"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M229.66,77.66l-128,128a8,8,0,0,1-11.32,0l-56-56a8,8,0,0,1,11.32-11.32L96,188.69,218.34,66.34a8,8,0,0,1,11.32,11.32Z"
        />
      </svg>
    </span>
  </label>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Checkbox /> shows correctly when is checked by default: Using as default checked 1`] = `
<DocumentFragment>
  <label
    class="chakra-checkbox css-1577qb8"
    data-checked=""
    data-testid="test-checkbox"
  >
    <input
      checked=""
      class="chakra-checkbox__input"
      name="test"
      style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
      type="checkbox"
      value=""
    />
    <span
      aria-hidden="true"
      class="chakra-checkbox__control css-124d1"
      data-checked=""
    >
      <svg
        class="chakra-icon css-1oeccli"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 256 256"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M229.66,77.66l-128,128a8,8,0,0,1-11.32,0l-56-56a8,8,0,0,1,11.32-11.32L96,188.69,218.34,66.34a8,8,0,0,1,11.32,11.32Z"
        />
      </svg>
    </span>
  </label>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Checkbox /> shows correctly when is disabled: Using as disabled 1`] = `
<DocumentFragment>
  <label
    class="chakra-checkbox css-1577qb8"
    data-disabled=""
    data-testid="test-checkbox"
  >
    <input
      aria-disabled="true"
      class="chakra-checkbox__input"
      disabled=""
      name="test"
      style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
      type="checkbox"
      value=""
    />
    <span
      aria-hidden="true"
      class="chakra-checkbox__control css-124d1"
      data-disabled=""
    />
  </label>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Checkbox /> shows correctly when is invalid: Using as invalid 1`] = `
<DocumentFragment>
  <label
    class="chakra-checkbox css-1577qb8"
    data-invalid=""
    data-testid="test-checkbox"
  >
    <input
      aria-invalid="true"
      class="chakra-checkbox__input"
      name="test"
      style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
      type="checkbox"
      value=""
    />
    <span
      aria-hidden="true"
      class="chakra-checkbox__control css-124d1"
      data-invalid=""
    />
  </label>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Checkbox /> shows correctly when size is extra small: Using extra small size 1`] = `
<DocumentFragment>
  <label
    class="chakra-checkbox css-1577qb8"
    data-testid="test-checkbox"
  >
    <input
      class="chakra-checkbox__input"
      name="test"
      style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
      type="checkbox"
      value=""
    />
    <span
      aria-hidden="true"
      class="chakra-checkbox__control css-10vuwm"
    />
  </label>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Checkbox /> shows correctly when size is large: Using large size 1`] = `
<DocumentFragment>
  <label
    class="chakra-checkbox css-1577qb8"
    data-testid="test-checkbox"
  >
    <input
      class="chakra-checkbox__input"
      name="test"
      style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
      type="checkbox"
      value=""
    />
    <span
      aria-hidden="true"
      class="chakra-checkbox__control css-1p4ng5h"
    />
  </label>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Checkbox /> shows correctly when size is medium: Using medium size 1`] = `
<DocumentFragment>
  <label
    class="chakra-checkbox css-1577qb8"
    data-testid="test-checkbox"
  >
    <input
      class="chakra-checkbox__input"
      name="test"
      style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
      type="checkbox"
      value=""
    />
    <span
      aria-hidden="true"
      class="chakra-checkbox__control css-124d1"
    />
  </label>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Checkbox /> shows correctly when size is small: Using small size 1`] = `
<DocumentFragment>
  <label
    class="chakra-checkbox css-1577qb8"
    data-testid="test-checkbox"
  >
    <input
      class="chakra-checkbox__input"
      name="test"
      style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
      type="checkbox"
      value=""
    />
    <span
      aria-hidden="true"
      class="chakra-checkbox__control css-1hm46cj"
    />
  </label>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Checkbox /> shows correctly when uses circle variant: Using circle variant 1`] = `
<DocumentFragment>
  <label
    class="chakra-checkbox css-1577qb8"
    data-testid="test-checkbox"
  >
    <input
      class="chakra-checkbox__input"
      name="test"
      style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
      type="checkbox"
      value=""
    />
    <span
      aria-hidden="true"
      class="chakra-checkbox__control css-1suvs5d"
    />
  </label>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Checkbox /> shows correctly when uses other icon: Using other icon 1`] = `
<DocumentFragment>
  <label
    class="chakra-checkbox css-1577qb8"
    data-testid="test-checkbox"
  >
    <input
      class="chakra-checkbox__input"
      name="test"
      style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
      type="checkbox"
      value=""
    />
    <span
      aria-hidden="true"
      class="chakra-checkbox__control css-124d1"
    >
      <svg
        class="chakra-icon css-7kextp"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 256 256"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M240,208H224V115.55a16,16,0,0,0-5.17-11.78l-80-75.48a1.14,1.14,0,0,1-.11-.11,16,16,0,0,0-21.53,0l-.11.11L37.17,103.77A16,16,0,0,0,32,115.55V208H16a8,8,0,0,0,0,16H240a8,8,0,0,0,0-16ZM48,115.55l.11-.1L128,40l79.9,75.43.11.1V208H160V160a16,16,0,0,0-16-16H112a16,16,0,0,0-16,16v48H48ZM144,208H112V160h32Z"
        />
      </svg>
    </span>
  </label>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Checkbox /> shows correctly when uses square variant: Using square variant 1`] = `
<DocumentFragment>
  <label
    class="chakra-checkbox css-1577qb8"
    data-testid="test-checkbox"
  >
    <input
      class="chakra-checkbox__input"
      name="test"
      style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
      type="checkbox"
      value=""
    />
    <span
      aria-hidden="true"
      class="chakra-checkbox__control css-124d1"
    />
  </label>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
